# klipperscreen-cpp

./: .gitignore  README.md  arm32.config  lv_drv_conf.h  main.alt.cpp  main.cpp  meson.build
grammar/: .gitignore  Cargo.toml  compile-grammar.ts  grammar.js  package.json
grammar/bindings/c/: tree-sitter-gluegunfw.h  tree-sitter-gluegunfw.pc.in
grammar/bindings/python/tree_sitter_gluegunfw/: __init__.py  binding.c
grammar/src/: grammar.json  parser.c
subprojects/: lv_drivers.wrap  lvgl.wrap
subprojects/packagefiles/lvgl/: lv_conf.h
subprojects/packagefiles/lvgl/env_support/cmake/: custom.cmake
